ambassador/setup/security_group_for_read-only-accts.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: CloudFormation template to create 10 security groups in the default VPC

Parameters:
  ProjectName:
    Description: Project Name (like workshop, immersionday, awsjams)
    Type: String
    Default: ambassador
  Environment:
    Description: Environment
    Type: String
    Default:  lab
  Author:
    Description: Author 
    Type: String
    Default: rdevera@tenable.com
  Version:
    Description: Version
    Type: String
    Default: v1
    
Resources:
  SecurityGroup001:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security Group 1"
      VpcId: !Ref "AWS::EC2::VPC::Id"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: "0.0.0.0/0"
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 65535
          CidrIp: "0.0.0.0/0"

  SecurityGroup002:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security Group 2"
      VpcId: !Ref "AWS::EC2::VPC::Id"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: "0.0.0.0/0"
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 65535
          CidrIp: "0.0.0.0/0"

  SecurityGroup003:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security Group 3"
      VpcId: !Ref "AWS::EC2::VPC::Id"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: "0.0.0.0/0"
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 65535
          CidrIp: "0.0.0.0/0"

  SecurityGroup004:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security Group 4"
      VpcId: !Ref "AWS::EC2::VPC::Id"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: "0.0.0.0/0"
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 65535
          CidrIp: "0.0.0.0/0"

  SecurityGroup005:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security Group 5"
      VpcId: !Ref "AWS::EC2::VPC::Id"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 25
          ToPort: 25
          CidrIp: "0.0.0.0/0"
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 65535
          CidrIp: "0.0.0.0/0"

  SecurityGroup006:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security Group 6"
      VpcId: !Ref "AWS::EC2::VPC::Id"
      SecurityGroupIngress:
        - IpProtocol: udp
          FromPort: 53
          ToPort: 53
          CidrIp: "0.0.0.0/0"
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 65535
          CidrIp: "0.0.0.0/0"

  SecurityGroup007:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security Group 7"
      VpcId: !Ref "AWS::EC2::VPC::Id"
      SecurityGroupIngress:
        - IpProtocol: udp
          FromPort: 69
          ToPort: 69
          CidrIp: "0.0.0.0/0"
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 65535
          CidrIp: "0.0.0.0/0"

  SecurityGroup008:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security Group 8"
      VpcId: !Ref "AWS::EC2::VPC::Id"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: "0.0.0.0/0"
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 65535
          CidrIp: "0.0.0.0/0"

  SecurityGroup009:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security Group 9"
      VpcId: !Ref "AWS::EC2::VPC::Id"
      SecurityGroupIngress:
        - IpProtocol: udp
          FromPort: 123
          ToPort: 123
          CidrIp: "0.0.0.0/0"
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 65535
          CidrIp: "0.0.0.0/0"

  SecurityGroup010:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security Group 10"
      VpcId: !Ref "AWS::EC2::VPC::Id"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: "0.0.0.0/0"
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 65535
          CidrIp: "0.0.0.0/0"
